<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/motoblue"
    tools:context=".ProfileActivity">

    <EditText
        android:id="@+id/usernametext"
        android:layout_width="263dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="5dp" />

    <TextView
        android:id="@+id/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/propickBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-141dp"
        android:ems="10"
        android:text="@string/click_to_add_profile_pic"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/propickBtn"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="141dp"
        android:background="@drawable/profileclicked"
        android:contentDescription="@string/click_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/add_profile"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="@drawable/roundbtn"
        android:fontFamily="sans-serif"
        android:text="@string/submit"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressProfile"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible" />
</RelativeLayout>