<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilepicTxt"
        android:layout_width="301dp"
        android:layout_height="239dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="79dp"
        app:civ_border_color="@color/motoblushadow"
        app:civ_border_width="10dp" />

    <TextView
        android:id="@+id/hitext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/hi"
        android:textSize="30sp" />

    <Button
        android:id="@+id/carpartsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="137dp"
        android:background="@drawable/roundbtn"
        android:text="@string/car_parts" />

    <Button
        android:id="@+id/carserviceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp"
        android:background="@drawable/roundbtn"
        android:text="@string/car_service" />


</RelativeLayout>